Updating initial about statement, metadata and favicon

--- a/index.html
+++ b/index.html
@@ -1,10 +1,60 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ramses Salas | Creative Technologist</title>
+      <title>Ramses Salas | Creative Technologist</title>
+
+      <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+      <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+      <link rel="shortcut icon" href="/favicon/favicon.ico" />
+      <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+      <meta name="apple-mobile-web-app-title" content="Ramses Salas" />
+      <link rel="manifest" href="/favicon/site.webmanifest" />
+
+      <meta charset="UTF-8" />
+      <meta name="description" content="I collaborate with artists and creative teams to shape digital experiences that combine creativity and technology. Using interactive and generative systems, I explore new ways of expressing ideas and crafting experiences. Together, we turn creative visions into digital realities.">
+      <meta name="keywords" content="creative technologist, digital experiences, interactive design, motion design, creative coding, generative systems, interactive systems, WebGL, TouchDesigner, Blender, immersive technology, experimental interaction, code and motion, creative collaboration">
+      <meta name="author" content="Ramses Salas">
+      <meta name="robots" content="index,follow">
+      <link rel="canonical" href="https://ramsessalas.com/">
+
+       <!-- Open Graph -->
+       <meta property="og:type" content="website">
+      <meta property="og:title" content="Technology as a Medium for Creative Expression">
+      <meta property="og:description" content="I collaborate with artists and creative teams to shape digital experiences that combine creativity and technology. Using interactive and generative systems, I explore new ways of expressing ideas and crafting experiences.">
+      <meta property="og:url" content="https://ramsessalas.com/">
+      <!-- TODO: ADD IMAGE -->
+      <meta property="og:image" content="https://ramsessalas.com/favicon/favicon.svg">
+      <meta property="og:image:alt" content="Ramses Salas Logo">
+
+      <!-- JSON-LD structured data -->
+      <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Person",
+            "name": "Ramses Salas",
+            "jobTitle": "Creative Technologist",
+            "url": "https://ramsessalas.com/",
+            "sameAs": [
+              "https://instagram.com/ramsessalas_",
+              "https://github.com/ramjsm",
+              "https://linkedin.com/in/ramsessalas"
+            ],
+            "description": "I collaborate with artists and creative teams to shape digital experiences that combine creativity and technology. Using interactive and generative systems, I explore new ways of expressing ideas and crafting experiences. Together, we turn creative visions into digital realities."
+          },
+          {
+            "@type": "WebSite",
+            "url": "https://ramsessalas.com/",
+            "name": "Ramses Salas Portfolio",
+            "description": "Technology as a medium for creative expression and experimentation"
+          }
+        ]
+      }
+      </script>
+
+
+
   </head>
   <body>
     <div id="root"><!--ssr-outlet--></div>
