Fixing font size on mobile devices

--- a/index.html
+++ b/index.html
@@ -19,12 +19,20 @@
 
        <!-- Open Graph -->
        <meta property="og:type" content="website">
-      <meta property="og:title" content="Technology as a Medium for Creative Expression">
+      <meta property="og:title" content="Ramses Salas | Creative Technologist">
       <meta property="og:description" content="I collaborate with artists and creative teams to shape digital experiences that combine creativity and technology. Using interactive and generative systems, I explore new ways of expressing ideas and crafting experiences.">
       <meta property="og:url" content="https://ramsessalas.com/">
       <!-- TODO: ADD IMAGE -->
       <meta property="og:image" content="https://ramsessalas.com/favicon/favicon.svg">
       <meta property="og:image:alt" content="Ramses Salas Logo">
+
+      <!-- Twitter Meta Tags -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta property="twitter:domain" content="ramsessalas.com">
+      <meta property="twitter:url" content="https://www.ramsessalas.com">
+      <meta name="twitter:title" content="Ramses Salas | Creative Technologist">
+      <meta name="twitter:description" content="I collaborate with artists and creative teams to shape digital experiences that combine creativity and technology. Using interactive and generative systems, I explore new ways of expressing ideas and crafting experiences.">
+      <meta name="twitter:image" content="https://ramsessalas.com/favicon/favicon.svg">
 
       <!-- JSON-LD structured data -->
       <script type="application/ld+json">
